<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".informasigojek">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="220dp"></com.google.android.gms.maps.MapView>


        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/card"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mapView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ijo_rec"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/hijau"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:background="@drawable/ijo_rec"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/kiri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/dari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_dari" />

                        <EditText
                            android:layout_width="213dp"
                            android:layout_height="wrap_content"
                            android:hint="Destinasi" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/dot"
                        android:layout_width="wrap_content"
                        android:paddingLeft="5dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/dot" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/dot" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:src="@drawable/ic_ke" />

                        <EditText
                            android:layout_width="213dp"
                            android:layout_height="wrap_content"
                            android:hint="Tujuan" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/kanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_switch" />
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_width="260dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#212121"
                android:src="@drawable/line" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pilih transportasi ke halte"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tkh1"
                android:textAppearance="@style/tkh"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tkh_contact" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tkh2"
                    android:textAppearance="@style/tkh"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tkh_harga" />
            </LinearLayout>
            </LinearLayout>

        
    </RelativeLayout>


</LinearLayout>