<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".informasigojek">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="220dp"></com.google.android.gms.maps.MapView>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal">
        <LinearLayout
            android:id="@+id/card"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mapView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ijo_rec"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/rectangle"
                android:layout_width="34dp"
                android:layout_height="6dp"
                android:layout_marginTop="12dp"
                android:background="#B3000000" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/rute"
                />

            <ImageView
                android:layout_width="214dp"
                android:layout_height="1dp"
                android:background="#212121"
                android:src="@drawable/line" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Main"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_gravity="left"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/foto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/line_kuning_ver"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"/>
                        <ImageView
                            android:id="@+id/dot1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot_ylw_stroke"
                            android:layout_marginTop="1dp"
                            />
                        <ImageView
                            android:id="@+id/dot2"
                            android:layout_below="@id/dot1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot_ylw"
                            android:layout_marginTop="28dp"
                            />
                        <ImageView
                            android:id="@+id/dot3"
                            android:layout_below="@id/dot2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot_ylw"
                            android:layout_marginTop="28dp"
                            />
                        <ImageView
                            android:id="@+id/dot4"
                            android:layout_below="@id/dot3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot_ylw"
                            android:layout_marginTop="28dp"
                            />

                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/posisi_sekarang"
                        android:text="@string/pemberhentian1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemberhentian2"
                        android:layout_marginTop="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemberhentian1"
                        android:layout_marginTop="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemberhentian1"
                        android:layout_marginTop="30dp"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reverse"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_gravity="left"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/top"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/line_kuning_ver"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"/>
                        <ImageView
                            android:id="@+id/dot1_r"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot_ylw_stroke"
                            android:layout_marginTop="1dp"
                            />
                        <ImageView
                            android:id="@+id/dot2_r"
                            android:layout_below="@id/dot1_r"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot_ylw"
                            android:layout_marginTop="28dp"
                            />
                        <ImageView
                            android:id="@+id/dot3_r"
                            android:layout_below="@id/dot2_r"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot_ylw"
                            android:layout_marginTop="28dp"
                            />
                        <ImageView
                            android:id="@+id/dot4_r"
                            android:layout_below="@id/dot3_r"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dot_ylw"
                            android:layout_marginTop="28dp"
                            />

                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/posisi_sekarang"
                        android:text="@string/pemberhentian1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemberhentian2"
                        android:layout_marginTop="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemberhentian1"
                        android:layout_marginTop="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemberhentian1"
                        android:layout_marginTop="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>